# LehrFEM_Minimal_Example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  geometry.cpp  logger.cpp  main.cpp  mesh.cpp  quad.cpp
